Replace blockquotes with annotations

--- a/2015-06-22-ios9.md
+++ b/2015-06-22-ios9.md
@@ -4,16 +4,14 @@ author: Nate Cook
 category: ""
 excerpt: "WWDC 2015 may not have packed quite as many fireworks as its predecessor, but neither was it short on the new and shiny. For this week's issue, we'll take a look at some of the changes that iOS 9 brings to the APIs we already know and love."
 status:
-    swift: 2.0
+  swift: 2.0
 ---
 
 WWDC 2015 may not have packed quite as many fireworks as its predecessor, but neither was it short on the new and shiny. The introduction of watchOS 2, including a revamped WatchKit, access to the Apple Watch hardware, and support for complications. Major changes to the Swift language and the announcement of open source plans. Brand new frameworks, such as Contacts, ContactsUI, and CoreSpotlight, and new UIKit types like `UIStackView` and `SFSafariViewController`.
 
 We'll surely delve into these major new components in the weeks and months to come. For now, however, let's take a look at some of the smaller changes that iOS 9 brings to the APIs we already know and love.
 
-
-* * *
-
+---
 
 ## String Transformations
 
@@ -29,6 +27,7 @@ Up first is the news that string transformations, formerly housed in Core Founda
 "annyeonghaseyo".stringByApplyingTransform(NSStringTransformLatinToHangul, reverse: false)
 // "안녕하세요"
 ```
+
 ```objc
 NSLog(@"%@", [@"privet" stringByApplyingTransform:NSStringTransformLatinToCyrillic reverse:NO]);
 // "привет"
@@ -44,6 +43,7 @@ NSLog(@"%@", [@"안녕하세요" stringByApplyingTransform:NSStringTransformLati
 "🐷".stringByApplyingTransform(NSStringTransformToUnicodeName, reverse: false)
 // "{PIG FACE}"
 ```
+
 ```objc
 NSLog(@"%@", [@"🐷" stringByApplyingTransform:NSStringTransformToUnicodeName reverse:NO]);
 // "{PIG FACE}"
@@ -59,6 +59,7 @@ NSLog(@"%@", [@"🐷" stringByApplyingTransform:NSStringTransformToUnicodeName r
         .componentsSeparatedByCharactersInSet(NSCharacterSet.whitespaceCharacterSet())
 // ["hello!", "kon'nichiha!", "swasdi!", "mrhba!", "nin", "hao!"]
 ```
+
 ```objc
 NSString *input = @"Hello! こんにちは! สวัสดี! مرحبا! 您好!";
 NSString *processing = [input stringByApplyingTransform:NSStringTransformToLatin reverse:NO];
@@ -71,7 +72,6 @@ NSLog(@"%@", output);
 ```
 
 For more on string transformations, be sure to check out Mattt's [terrific article on `CFStringTransform`](https://nshipster.com/cfstringtransform/).
-
 
 ## CLLocationManager.requestLocation
 
@@ -91,7 +91,7 @@ class ViewController : UIViewController, CLLocationManagerDelegate {
     }
 
    // MARK: - CLLocationManagerDelegate
-    
+
     func locationManager(manager: CLLocationManager, didUpdateLocations locations: [CLLocation]) {
         if let location = locations.first {
             print("Current location: \(location)")
@@ -99,32 +99,34 @@ class ViewController : UIViewController, CLLocationManagerDelegate {
             // ...
         }
     }
-        
+
     func locationManager(manager: CLLocationManager, didFailWithError error: NSError) {
         print("Error finding location: \(error.localizedDescription)")
     }
 }
 ```
 
-
 ## Swiftification
 
 The Cocoa APIs in iOS 9 (and OS X 10.11) include thousands of minor changes designed to make Swift interoperability safer and cleaner. These changes start with the familiar nullability annotations, converting implicitly unwrapped parameters and return values to either true Optionals or simple, non-optional data types. But they also go much further.
 
-For example, instead of marking `NSArray` return values as nullable, many APIs have been modified to return an empty array—semantically these have the same value (i.e., nothing), but a non-optional array is far simpler to work with. Moreover, many Cocoa APIs are gradually taking advantage of the new Objective-C generic syntax to provide typed arrays. The `CLLocationManagerDelegate` method `locationManager(_:didUpdateLocations:)` shown above is one such example: where the `locations` parameter used to be imported as an  `AnyObject` array, it is now an array of `CLLocation`, eliminating the need for any casting in the method body.
+For example, instead of marking `NSArray` return values as nullable, many APIs have been modified to return an empty array—semantically these have the same value (i.e., nothing), but a non-optional array is far simpler to work with. Moreover, many Cocoa APIs are gradually taking advantage of the new Objective-C generic syntax to provide typed arrays. The `CLLocationManagerDelegate` method `locationManager(_:didUpdateLocations:)` shown above is one such example: where the `locations` parameter used to be imported as an `AnyObject` array, it is now an array of `CLLocation`, eliminating the need for any casting in the method body.
 
 Finally, some APIs that were completely inaccessible from Swift have been revised, such as methods for retrieving `UIAppearance` proxies that limit appearance to a particular containment hierarchy—UIKit's version of CSS-lite. The old `appearanceWhenContainedIn:` method is implemented with C variadic parameters, which Swift doesn't import; the new `appearanceWhenContainedInInstancesOfClasses(_:)` method simply takes an array of type objects:
 
 ```swift
 UIBarButtonItem.appearanceWhenContainedInInstancesOfClasses([UINavigationController.self]).tintColor = UIColor.redColor()
 ```
+
 ```objc
 [UIBarButtonItem appearanceWhenContainedInInstancesOfClasses:@[[UINavigationController class]]].tintColor = [UIColor redColor];
 ```
 
-> Ironically enough, this method crashes at runtime when used from Swift. Betas gonna beta.
+{% error do %}
 
+Ironically enough, this method crashes at runtime when used from Swift. Betas gonna beta.
 
+{% enderror %}
 
 ## NSFormatter Additions
 
@@ -141,11 +143,12 @@ formatter.numberStyle = .OrdinalStyle
 let numbers = [1, 2, 3, 4, 5]
 numbers.map { formatter.stringFromNumber($0)! }
 // ["1st", "2nd", "3rd", "4th", "5th"]
-    
+
 formatter.locale = NSLocale(localeIdentifier: "es")
 numbers.map { formatter.stringFromNumber($0)! }
 // ["1º", "2º", "3º", "4º", "5º"]
 ```
+
 ```objc
 NSNumberFormatter *formatter = [[NSNumberFormatter alloc] init];
 formatter.numberStyle = NSNumberFormatterOrdinalStyle;
@@ -163,10 +166,10 @@ for (NSNumber *number in numbers) {
 // "1º", "2º", "3º", "4º", "5º"
 ```
 
-Next, the existing `.CurrencyStyle` gets some company with `.CurrencyPluralStyle`, `.CurrencyISOCodeStyle`, and `.CurrencyAccountingStyle`. When using these new styles, be sure your locale fully specifies both a language *and* a country, which it makes it possible for the formatter to choose the right currency and presentation:
+Next, the existing `.CurrencyStyle` gets some company with `.CurrencyPluralStyle`, `.CurrencyISOCodeStyle`, and `.CurrencyAccountingStyle`. When using these new styles, be sure your locale fully specifies both a language _and_ a country, which it makes it possible for the formatter to choose the right currency and presentation:
 
 ```swift
-let styles: [NSNumberFormatterStyle] = [.CurrencyStyle, .CurrencyPluralStyle, 
+let styles: [NSNumberFormatterStyle] = [.CurrencyStyle, .CurrencyPluralStyle,
                 .CurrencyISOCodeStyle, .CurrencyAccountingStyle]
 formatter.locale = NSLocale(localeIdentifier: "en_US")
 styles.map {
@@ -185,7 +188,7 @@ styles.map {
 
 ### NSDateFormatter
 
-Second—and I'll fess up—this new `NSDateFormatter` method is a bit of a cheat. `setLocalizedDateFormatFromTemplate(_:)` was introduced in iOS 8 but largely slid under the radar until this year's sessions on internationalization. This new-*ish* method makes it supremely easy to define a template for the date and time elements you want; however, it leaves the formatting up to the excellent localization built into `NSDateFormatter`:
+Second—and I'll fess up—this new `NSDateFormatter` method is a bit of a cheat. `setLocalizedDateFormatFromTemplate(_:)` was introduced in iOS 8 but largely slid under the radar until this year's sessions on internationalization. This new-_ish_ method makes it supremely easy to define a template for the date and time elements you want; however, it leaves the formatting up to the excellent localization built into `NSDateFormatter`:
 
 ```swift
 let now = NSDate()
@@ -218,9 +221,6 @@ shortFormatter.stringFromDate(now)
 // "Juni 15"
 ```
 
+---
 
-* * * 
-
-
-Well, that's that for our quick tour through some of iOS 9's new APIs, though there are many more where those came from. What new features are *you* most excited about in iOS 9 or OS X 10.11? Check out [Apple's diffs](https://developer.apple.com/library/prerelease/ios/releasenotes/General/iOS90APIDiffs/) and [let us know](https://twitter.com/nshipster)!
-
+Well, that's that for our quick tour through some of iOS 9's new APIs, though there are many more where those came from. What new features are _you_ most excited about in iOS 9 or OS X 10.11? Check out [Apple's diffs](https://developer.apple.com/library/prerelease/ios/releasenotes/General/iOS90APIDiffs/) and [let us know](https://twitter.com/nshipster)!
