--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -2,13 +2,12 @@
 title: Swift GYB
 author: Mattt
 category: Swift
-excerpt:
-    Not all code can be glamorous.
-    In fact, a lot of the low-level infrastructure that makes everything work
-    is a slog of boilerplate.
+excerpt: Not all code can be glamorous.
+  In fact, a lot of the low-level infrastructure that makes everything work
+  is a slog of boilerplate.
 hiddenlang: ""
 status:
-    swift: 4.2
+  swift: 4.2
 ---
 
 The term _"boilerplate"_ goes back to the early days of print media.
@@ -56,9 +55,13 @@ Instead, the Swift maintainers use a Python script called
 [gyb.py](https://github.com/apple/swift/blob/master/utils/gyb.py)
 to generate source code using a small set of template tags.
 
-> GYB is an acronym for "Generate Your Boilerplate",
-> a reference to another Python tool,
-> [GYP](https://gyp.gsrc.io), or "Generate Your Projects".
+{% note do %}
+
+GYB is an acronym for "Generate Your Boilerplate",
+a reference to another Python tool,
+[GYP](https://gyp.gsrc.io), or "Generate Your Projects".
+
+{% endnote %}
 
 ## How GYB Works
 
@@ -126,9 +129,13 @@ $ wc -l Codable.swift
 5790 Codable.swift
 ```
 
-> Important: A valid GYB template may not generate valid Swift code.
-> If compilation errors occur in derived files,
-> it may be difficult to determine the underlying cause.
+{% warning do %}
+
+A valid GYB template may not generate valid Swift code.
+If compilation errors occur in derived files,
+it may be difficult to determine the underlying cause.
+
+{% endwarning %}
 
 ## Using GYB in Xcode
 
@@ -163,7 +170,11 @@ find . -name '*.gyb' |                                               \
     done
 ```
 
-> Make sure to order the GYB build phase before Compile Sources.
+{% warning do %}
+
+Make sure to order the GYB build phase before Compile Sources.
+
+{% endwarning %}
 
 Now when you build your project
 any file with the `.swift.gyb` file extension
@@ -228,9 +239,13 @@ which generates Swift enumerations
 for each of the currencies defined by the
 [ISO 4217](https://www.iso.org/iso-4217-currency-codes.html) specification.
 
-> Keep compilation fast and deterministic
-> by downloading data to files that can be checked into source control
-> rather than making HTTP requests or database queries in GYB files.
+{% note do %}
+
+Keep compilation fast and deterministic
+by downloading data to files that can be checked into source control
+rather than making HTTP requests or database queries in GYB files.
+
+{% endnote %}
 
 Code generation makes it trivial to keep your code in sync
 with the relevant standards.
@@ -248,11 +263,15 @@ We hope that this momentum is carried in future updates to the language.
 In the meantime, for everything else,
 GYB is a useful tool for code generation.
 
-> Another great tool from the community for this is
-> [Sourcery](https://github.com/krzysztofzablocki/Sourcery),
-> which allows you to write templates in Swift
-> (via [Stencil](https://github.com/stencilproject/Stencil))
-> rather than Python.
+{% note do %}
+
+Another great tool from the community for this is
+[Sourcery](https://github.com/krzysztofzablocki/Sourcery),
+which allows you to write templates in Swift
+(via [Stencil](https://github.com/stencilproject/Stencil))
+rather than Python.
+
+{% endnote %}
 
 "Don't Repeat Yourself" may be a virtue in programming,
 but sometimes you have to say things a few times to make things work.
