--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -3,12 +3,12 @@ title: Never
 author: Mattt
 category: Swift
 excerpt: >
-    Making a claim that something will never be the case
-    can feel like an invitation for the universe to prove otherwise.
-    Fortunately for us,
-    Swift lives up to this higher standard thanks to the unlikeliest of types.
+  Making a claim that something will never be the case
+  can feel like an invitation for the universe to prove otherwise.
+  Fortunately for us,
+  Swift lives up to this higher standard thanks to the unlikeliest of types.
 status:
-    swift: 4.2
+  swift: 4.2
 ---
 
 "Never" is a proposition that an event doesn't occur
@@ -271,12 +271,16 @@ func ?? <T>(lhs: T?, rhs: @autoclosure () -> Never) -> T {
 }
 ```
 
-> In the [rationale](https://forums.swift.org/t/se-0217-the-unwrap-or-die-operator/14107/222)
-> for [SE-0217: Introducing the !! "Unwrap or Die" operator to the Swift Standard Library](https://github.com/apple/swift-evolution/blob/master/proposals/0217-bangbang.md#on-forced-unwraps),
-> [Joe Groff](https://github.com/jckarter) notes that
-> "[...] We found that overloading [?? for Never]
-> had unacceptable impact on type-checking performance...".
-> Therefore, it's recommended that you don't add this to your codebase.
+{% note do %}
+
+In the [rationale](https://forums.swift.org/t/se-0217-the-unwrap-or-die-operator/14107/222)
+for [SE-0217: Introducing the !! "Unwrap or Die" operator to the Swift Standard Library](https://github.com/apple/swift-evolution/blob/master/proposals/0217-bangbang.md#on-forced-unwraps),
+[Joe Groff](https://github.com/jckarter) notes that
+"[...] We found that overloading [?? for Never]
+had unacceptable impact on type-checking performance...".
+Therefore, it's recommended that you don't add this to your codebase.
+
+{% endnote %}
 
 ### Expressive Throw
 
