--- a/2018-08-13-hashable.md
+++ b/2018-08-13-hashable.md
@@ -43,7 +43,7 @@ Let's say you have a
 [**list**](<https://en.wikipedia.org/wiki/List_(abstract_data_type)>)
 of objects that can be compared for equality with one another.
 To find a particular object in that list,
-you iterate all the elements until you find a match. 
+you iterate all the elements until you find a match.
 As you add more elements to the array,
 the average amount of time necessary to find any one of them increases linearly
 (`O(n)`).
@@ -283,12 +283,16 @@ To make things even safer,
 `Hasher` generates random seed values each time an app is launched,
 to make hash values even less predictable.
 
-> You shouldn't rely on specific hash values or save them across executions.
-> On the rare occasion that you would need deterministic behavior,
-> you can set the flag `SWIFT_DETERMINISTIC_HASHING`
-> to disable random hash seeds,.
-> You shouldn't depend on consistent values,
-> but you may want this to be deterministic for testing purposes.
+{% note do %}
+
+You shouldn't rely on specific hash values or save them across executions.
+On the rare occasion that you would need deterministic behavior,
+you can set the flag `SWIFT_DETERMINISTIC_HASHING`
+to disable random hash seeds,.
+You shouldn't depend on consistent values,
+but you may want this to be deterministic for testing purposes.
+
+{% endnote %}
 
 ---
 
