Fix annotation tags

--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -55,13 +55,13 @@ Instead, the Swift maintainers use a Python script called
 [gyb.py](https://github.com/apple/swift/blob/master/utils/gyb.py)
 to generate source code using a small set of template tags.
 
-{% note do %}
+{% info do %}
 
 GYB is an acronym for "Generate Your Boilerplate",
 a reference to another Python tool,
 [GYP](https://gyp.gsrc.io), or "Generate Your Projects".
 
-{% endnote %}
+{% endinfo %}
 
 ## How GYB Works
 
@@ -239,13 +239,13 @@ which generates Swift enumerations
 for each of the currencies defined by the
 [ISO 4217](https://www.iso.org/iso-4217-currency-codes.html) specification.
 
-{% note do %}
+{% info do %}
 
 Keep compilation fast and deterministic
 by downloading data to files that can be checked into source control
 rather than making HTTP requests or database queries in GYB files.
 
-{% endnote %}
+{% endinfo %}
 
 Code generation makes it trivial to keep your code in sync
 with the relevant standards.
@@ -263,7 +263,7 @@ We hope that this momentum is carried in future updates to the language.
 In the meantime, for everything else,
 GYB is a useful tool for code generation.
 
-{% note do %}
+{% info do %}
 
 Another great tool from the community for this is
 [Sourcery](https://github.com/krzysztofzablocki/Sourcery),
@@ -271,7 +271,7 @@ which allows you to write templates in Swift
 (via [Stencil](https://github.com/stencilproject/Stencil))
 rather than Python.
 
-{% endnote %}
+{% endinfo %}
 
 "Don't Repeat Yourself" may be a virtue in programming,
 but sometimes you have to say things a few times to make things work.
