--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -271,7 +271,7 @@ func ?? <T>(lhs: T?, rhs: @autoclosure () -> Never) -> T {
 }
 ```
 
-{% note do %}
+{% info do %}
 
 In the [rationale](https://forums.swift.org/t/se-0217-the-unwrap-or-die-operator/14107/222)
 for [SE-0217: Introducing the !! "Unwrap or Die" operator to the Swift Standard Library](https://github.com/apple/swift-evolution/blob/master/proposals/0217-bangbang.md#on-forced-unwraps),
@@ -280,7 +280,7 @@ for [SE-0217: Introducing the !! "Unwrap or Die" operator to the Swift Standard 
 had unacceptable impact on type-checking performance...".
 Therefore, it's recommended that you don't add this to your codebase.
 
-{% endnote %}
+{% endinfo %}
 
 ### Expressive Throw
 
