--- a/2018-08-13-hashable.md
+++ b/2018-08-13-hashable.md
@@ -283,7 +283,7 @@ To make things even safer,
 `Hasher` generates random seed values each time an app is launched,
 to make hash values even less predictable.
 
-{% note do %}
+{% info do %}
 
 You shouldn't rely on specific hash values or save them across executions.
 On the rare occasion that you would need deterministic behavior,
@@ -292,7 +292,7 @@ to disable random hash seeds,.
 You shouldn't depend on consistent values,
 but you may want this to be deterministic for testing purposes.
 
-{% endnote %}
+{% endinfo %}
 
 ---
 
