--- a/2018-08-13-hashable.md
+++ b/2018-08-13-hashable.md
@@ -288,9 +288,7 @@ to make hash values even less predictable.
 You shouldn't rely on specific hash values or save them across executions.
 On the rare occasion that you would need deterministic behavior,
 you can set the flag `SWIFT_DETERMINISTIC_HASHING`
-to disable random hash seeds,.
-You shouldn't depend on consistent values,
-but you may want this to be deterministic for testing purposes.
+to disable random hash seeds.
 
 {% endinfo %}
 
