--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -5,7 +5,7 @@ category: Objective-C
 tags: nshipster, popular
 excerpt: "Once again, encoding our logical universe into the cold, calculating bytecode of computers forces us to deal with these questions one way or another. And as you'll see from our discussion of boolean types in Objective-C and its kin, truth is indeed stranger than fiction."
 status:
-    swift: n/a
+  swift: n/a
 ---
 
 We've talked before about the [philosophical and technical concerns of nothingness in programming](https://nshipster.com/nil/). This week, our attention turns to another fundamental matter: Truth.
@@ -66,7 +66,7 @@ if (different(512, 256) == YES) {
 
 This evaluates to:
 
-```
+```objc
 11 != 10
 10 == 11
 512 == 256
@@ -104,7 +104,7 @@ So, to recap, here is a table of all of the truth types and values in Objective-
   <thead>
     <tr>
       <th>Name</th>
-      <th>Typedef</tt>
+      <th>Typedef</th>
       <th>Header</th>
       <th>True Value</th>
       <th>False Value</th>
