--- a/2015-06-01-mirror.md
+++ b/2015-06-01-mirror.md
@@ -151,7 +151,7 @@ and enumerate each of the mirror's children.
 
 ```swift
 b8.customMirror.subjectType // ChessBoard.Coordinate.Type
-b8.customMirror.displayStyle // tuple
+b8.customMirror.displayStyle // struct
 
 for child in b8.customMirror.children {
     print("\(child.label ?? ""): \(child.value)")
