--- a/2015-06-01-mirror.md
+++ b/2015-06-01-mirror.md
@@ -22,6 +22,7 @@ In fact, this functionality might be better described as
 <dfn>introspection</dfn> rather than reflection.
 
 But can you really blame them for going with that terminology?
+
 "Introspection" is such a bloviated and acoustically unpleasant word
 compared to "Reflection."
 And how could anyone pass on the nominal slam dunk of
@@ -67,7 +68,8 @@ To get a better understanding of how this looks in practice,
 let's look at an example involving an implementation of a data model
 for the game of chess:
 
-A chessboard comprises 64 squares divided into
+A chessboard comprises 64 squares,
+divided into
 8 rows (called <dfn>ranks</dfn>) and
 8 columns (called <dfn>files</dfn>).
 A compact way to represent each location on a board
@@ -113,7 +115,7 @@ String(reflecting: b8) // ChessBoard.Coordinate(value: 57)
 ```
 
 `57` in decimal is equal to `0111001` in binary,
-or a value of 7 for rank and 1 for file (),
+or a value of 7 for rank and 1 for file,
 which adding the index offset of 1 brings us to
 rank 8 and file 2.
 
@@ -518,7 +520,7 @@ And --- truth be told ---
 truth be told, things weren't all super great.
 Programming in Swift could, at times,
 feel unnecessarily finicky and constraining.
-_"If only we could [swizzle](https://nshipster.com/method-swizzling/)..."_
+_"If only we could [swizzle](https://nshipster.com/method-swizzling/)…"_
 we'd grumble.
 
 And perhaps this is still the case for some of us some of the time,
