--- a/2015-06-01-mirror.md
+++ b/2015-06-01-mirror.md
@@ -424,9 +424,10 @@ as a contrived example of how to use `CustomLeafReflectable`.
 And what we came up with is kind of a mess, right?
 Ad hoc additions of `value` type members for only some of the pieces
 (kings don't have a value in chess because they're a win condition)?
+An "abstract" base class that crashes if you try to instantiate it
+(for [current lack of a first-class language feature](https://github.com/apple/swift-evolution/blob/master/proposals/0026-abstract-classes-and-methods.md))?
 Yikes.
-Those kinds of heterogeneous interfaces give OOP a bad name
-and lead to unforeseen issues down the line.
+These are the kinds of things that give OOP a bad name.
 
 We can mitigate nearly all of these problems
 by adopting a protocol-oriented approach like the following:
