Fix Result type

--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -127,7 +127,7 @@ Swift doesn't have a standard `Result` type,
 but most of them look something like this:
 
 ```swift
-enum Result<Value, Error: Swift.Error> {
+enum Result<Value, Error> {
     case success(Value)
     case failure(Error)
 }
