--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -139,10 +139,11 @@ produced by functions that execute asynchronously
 
 For example,
 a function that makes an asynchronous HTTP request might use a `Result` type
-to store either a response or an error:
+to wrap either a response and data or an error:
 
 ```swift
-func fetch(_ request: Request, completion: (Result<Response, Error>) -> Void) {
+func fetch(_ request: URLRequest,
+          completion: (Result<(URLResponse, Data), Error>) -> Void) {
     // ...
 }
 ```
@@ -153,8 +154,8 @@ you'd switch over `result` to handle `.success` and `.failure` separately:
 ```swift
 fetch(request) { result in
     switch result {
-    case .success(let value):
-        print("Success: \(value)")
+    case let .success(response, _):
+        print("Success: \(response)")
     case .failure(let error):
         print("Failure: \(error)")
     }
