--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -83,7 +83,7 @@ in order to install the SourceKit-LSP extension later on.
 [Electron](https://electronjs.org) apps
 have a reputation for being big and slow,
 but don't let that stop you from giving VSCode a try ---
-it's performance and memory footprint are comparable to a native app.
+its performance and memory footprint are comparable to a native app.
 
 {% endinfo %}
 
