Add missing wording

--- a/2018-11-26-simctl.md
+++ b/2018-11-26-simctl.md
@@ -62,7 +62,8 @@ $ xcrun simctl
 Many of these subcommands are self-explanatory
 and offer a command-line interface to functionality
 accessible through the Simulator app itself.
-However, the
+However, the best way to understand how they all work together
+is to start with the `list` subcommand.
 
 ## Managing Simulator Devices
 
