--- a/2012-09-03-locale.md
+++ b/2012-09-03-locale.md
@@ -79,8 +79,7 @@ import Foundation
 let units = ["meter", "smoot", "agate", "ångström"]
 
 units.sorted { (lhs, rhs) in
-    lhs.compare(rhs, locale: Locale.current) ==
-        .orderedAscending
+    lhs.compare(rhs, locale: Locale.current) == .orderedAscending
 }
 // => ["agate", "ångström", "meter", "smoot"]
 ```
@@ -94,8 +93,7 @@ an ISO 3166-2 region code (such as `US` for the United States).
 ```swift
 let 🇸🇪 = Locale(identifier: "sv_SE")
 units.sorted { (lhs, rhs) in
-    lhs.compare(rhs, locale: 🇸🇪) ==
-        .orderedAscending
+    lhs.compare(rhs, locale: 🇸🇪) == .orderedAscending
 }
 // => ["agate", "meter", "smoot", "ångström"]
 ```
