--- a/2012-09-03-locale.md
+++ b/2012-09-03-locale.md
@@ -79,7 +79,7 @@ import Foundation
 let units = ["meter", "smoot", "agate", "ångström"]
 
 units.sorted { (lhs, rhs) in
-    lhs.compare(rhs, locale: Locale.current) == .orderedAscending
+    lhs.compare(rhs, locale: .current) == .orderedAscending
 }
 // => ["agate", "ångström", "meter", "smoot"]
 ```
