--- a/2018-12-03-homebrew.md
+++ b/2018-12-03-homebrew.md
@@ -301,16 +301,7 @@ you can now run any of its packaged executables from the command-line:
 
 ```terminal
 $ swift-syntax-highlight 'print("Hello, world!")'
-```
-
-```html
-<pre
-  class="highlight"
-><code><span class="n">print</span><span class="p">(</span><span class="s2">"Hello, world!"</span><span class="p">)</span></code></pre>
-```
-
-```swift
-print("Hello, world!")
+<pre class="highlight"><code><span class="n">print</span><span class="p">(</span><span class="s2">"Hello, world!"</span><span class="p">)</span></code></pre>
 ```
 
 _Neat!_
