--- a/2018-12-03-homebrew.md
+++ b/2018-12-03-homebrew.md
@@ -175,9 +175,7 @@ you should be able to do the following with your `Makefile`:
   address those first and foremost.
 - **Run the program after cleaning.**
   Cleaning the project after installation
-  shows whether you have any linker errors.
-  It's much better to learn about those here and now
-  rather than later on someone else can't get things working on their machine...
+  reveals any linker errors.
 - **Uninstall successfully.**
   After running `make uninstall`,
   your executable should no longer be accessible from your `$PATH`.
