--- a/2018-12-03-homebrew.md
+++ b/2018-12-03-homebrew.md
@@ -124,7 +124,7 @@ prefix ?= /usr/local
 bindir = $(prefix)/bin
 libdir = $(prefix)/lib
 
-build: $(wildcard Sources/**/*.swift)
+build:
 	swift build -c release --disable-sandbox
 
 install: build
@@ -141,6 +141,8 @@ uninstall:
 
 clean:
 	rm -rf .build
+
+.PHONY: build install uninstall clean
 ```
 
 This `Makefile` declares four targets:
