Clarify point about App Sandboxing

--- a/2018-12-03-homebrew.md
+++ b/2018-12-03-homebrew.md
@@ -151,7 +151,7 @@ This `Makefile` declares four targets:
 `build` calls `swift build` with `release` configuration
 and the option to disable
 [App Sandboxing](https://developer.apple.com/app-sandboxing/)
-(which would otherwise cause problems here).
+(which otherwise causes problems when installing via Homebrew).
 
 `install` depends on `build` ---
 which makes sense because
