Correct etymology of GYB

--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -57,9 +57,24 @@ to generate source code using a small set of template tags.
 
 {% info do %}
 
-GYB is an acronym for "Generate Your Boilerplate",
-a reference to another Python tool,
-[GYP](https://gyp.gsrc.io), or "Generate Your Projects".
+<abbr title="Generate Your Boilerplate">GYB</abbr>
+is an acronym for "Generate Your Boilerplate",
+a reference to
+<del>
+another Python tool,
+<a href="https://gyp.gsrc.io">
+<abbr title="Generate Your Projects">GYP</abbr>
+</a>
+or "Generate Your Projects"
+</del>
+<ins>
+a Haskell package,
+<a href="https://hackage.haskell.org/package/syb">
+<abbr title="Scrap Your Boilerplate">SYB</abbr>
+</a>
+or "Scrap Your Boilerplate"
+</ins>
+.
 
 {% endinfo %}
 
