--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -65,14 +65,15 @@ another Python tool,
 <a href="https://gyp.gsrc.io">
 <abbr title="Generate Your Projects">GYP</abbr>
 </a>
-or "Generate Your Projects"
+("Generate Your Projects")
 </del>
+
 <ins>
-a Haskell package,
+the Haskell package
 <a href="https://hackage.haskell.org/package/syb">
 <abbr title="Scrap Your Boilerplate">SYB</abbr>
 </a>
-or "Scrap Your Boilerplate"
+("Scrap Your Boilerplate")
 </ins>
 .
 
