--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -67,7 +67,7 @@ another Python tool,
 </a>
 ("Generate Your Projects")
 </del>
-
+&nbsp;
 <ins>
 the Haskell package
 <a href="https://hackage.haskell.org/package/syb">
