--- a/2013-05-06-gpuimage.md
+++ b/2013-05-06-gpuimage.md
@@ -3,6 +3,7 @@ title: GPUImage
 author: Mattt
 category: Open Source
 excerpt: "GPUImage is a BSD-licensed iOS library  that lets you apply GPU-accelerated filters and other effects to images, live camera video, and movies. If you're not careful, you may well end up creating a camera app by the end of the article."
+retired: true
 status:
   swift: n/a
 ---
@@ -223,7 +224,7 @@ Here's a table of the 125 (!) filters that come with GPUImage:
   </tbody>
 </table>
 
-Seriously, the [Filter Showcase Example App](https://github.com/BradLarson/GPUImage/tree/master/examples/iOS/FilterShowcase) that comes bundled in the repository could easily retail on the AppStore for $3.99, as-is. Add Twitter integration and a few sound effects, and you could bump that up to a respectable $6.99.
+Seriously, the [Filter Showcase Example App](https://github.com/BradLarson/GPUImage/tree/master/examples/iOS/FilterShowcase) that comes bundled in the repository could easily retail on the AppStore for $3.99, as-is. Add Twitter integration and a few sound effects, and you could bump that up to a respectable$6.99.
 
 ## Rendering Pipeline
 
