--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -3,8 +3,9 @@ title: xctool
 author: Mattt
 category: Open Source
 excerpt: "Control the build system, and you control the destiny of the language, its ecosystem, and community."
+retired: true
 status:
-    swift: n/a
+  swift: n/a
 ---
 
 > Control the build system, and you control the destiny of the language, its ecosystem, and community.
@@ -80,7 +81,7 @@ Remember `xctool`'s `json-compilation-database` reporter option? Well, that outp
 
 At the time of writing, there is still a ways to go before this becomes widely adopted, but my hope is that, now that the cat is out of the bag, some enterprising individuals might work together to make an insanely great experience around this promising tool.
 
-* * *
+---
 
 Just as with the growth population within cities, infrastructure makes all of difference. One way or another, whether by local [government mandate](https://en.wikipedia.org/wiki/Commissioners'_Plan_of_1811), [emergent self-organization](https://en.wikipedia.org/wiki/Kowloon_Walled_City), or somewhere in-between, environments are changed to accommodate this growth.
 
