Add explicit category

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -1,7 +1,7 @@
 ---
 title: "iOS 7"
 author: Mattt
-category: ""
+category: Miscellaneous
 excerpt: "With the NDA finally lifted, we can finally talk about all of the amazing new APIs in iOS 7."
 status:
     swift: 2.0
