--- a/2014-06-09-ios8.md
+++ b/2014-06-09-ios8.md
@@ -1,7 +1,7 @@
 ---
 title: iOS 8
 author: Mattt
-category: ""
+category: Miscellaneous
 excerpt: "Ask anyone, and they'll tell you: WWDC 2014 was the one of the most exciting in recent memory. This week, we'll take a look beneath the headline features, and share some of the more obscure APIs that everyone should know about."
 status:
     swift: 2.0
