--- a/2014-12-08-apple-pay.md
+++ b/2014-12-08-apple-pay.md
@@ -1,7 +1,7 @@
 ---
 title: Pay
 author: Jack Flintermann
-category: ""
+category: Miscellaneous
 excerpt: "There's a unique brand of modern angst that manifests the moment you decide to buy something online. While there's no English word for it, it translates roughly to \"Where is my credit card? What is its number? How badly do I actually want this thing, anyway?\""
 status:
     swift: 1.0
