--- a/2018-09-17-ios-12.md
+++ b/2018-09-17-ios-12.md
@@ -1,7 +1,7 @@
 ---
 title: iOS 12
 author: Mattt
-category: ""
+category: Miscellaneous
 excerpt: >
   Here at NSHipster,
   we're interested in the nitty-gritty:
