--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -1,7 +1,7 @@
 ---
 title: Swift Development with Visual Studio Code
 author: Mattt
-category: ""
+category: Miscellaneous
 excerpt: >-
   VSCode is a cross-platform text and source code editor from Microsoft,
   and among the first tools to support Language Server Protocol.
