--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -1,7 +1,7 @@
 ---
 title: Back Row
 author: Mattt
-category: ""
+category: Miscellaneous
 excerpt: "Back Row is a private framework used in the Apple TV user experience. Rather than waiting for Apple to open up the Apple TV SDK, one can take matters into their own hands."
 retired: true
 status:
