--- a/2013-04-01-icloud.md
+++ b/2013-04-01-icloud.md
@@ -1,7 +1,7 @@
 ---
 title: iCloud
 author: Mattt
-category: ""
+category: Miscellaneous
 excerpt: "Perhaps what Apple is most renowned for is its consistent track record for creating great webservices. From consumer products like MobileMe and Ping to developer tools including the Provisioning Portal and iTunes Connect, Apple has continued to set new standards for convenience, robustness, and extensibility."
 status:
     swift: 1.1
