--- a/2014-03-17-empathy.md
+++ b/2014-03-17-empathy.md
@@ -1,7 +1,7 @@
 ---
 title: Empathy
 author: Mattt
-category: ""
+category: Miscellaneous
 tags: nshipster
 excerpt: "We naturally want to help one another, to explain ideas, to be generous and patient. However, on the Internet, human nature seems to drop a few packets."
 status:
