--- a/2015-06-22-ios9.md
+++ b/2015-06-22-ios9.md
@@ -1,7 +1,7 @@
 ---
 title: iOS 9
 author: Nate Cook
-category: ""
+category: Miscellaneous
 excerpt: "WWDC 2015 may not have packed quite as many fireworks as its predecessor, but neither was it short on the new and shiny. For this week's issue, we'll take a look at some of the changes that iOS 9 brings to the APIs we already know and love."
 status:
   swift: 2.0
